correct ui on mobile

--- a/packages/nextjs/styles/globals.css
+++ b/packages/nextjs/styles/globals.css
@@ -33,4 +33,10 @@ p {
 
 table tr {
   text-align: center;
+  height: 50px;
+}
+
+table tr:nth-child(even) {
+  background-color: rgba(255, 255, 255, 0.5);
+  height: 50px;
 }
